# polka.run

./: .gitignore  404.html  CNAME  Cargo.toml  DESIGN.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile.toml  README.md  Trunk.toml  index.html  output-26443486b323b96e.css  output-3a9b1b416b7a32ca.css  output-599a2e923e5af928.css  output-86a940e120031e41.css  output-8bde734b0fff2f1e.css  output-afa1b8159e075578.css  output-d15582f36174e1f1.css  output-d89362bece61a000.css  package-lock.json  polka-run-2d85d70b169d143.js  polka-run-2d85d70b169d143_bg.wasm  polka-run-39d0428ff7b72dec.js  polka-run-39d0428ff7b72dec_bg.wasm  polka-run-646f04f6940274f0.js  polka-run-646f04f6940274f0_bg.wasm  polka-run-64e08f07573cfd74.js  polka-run-64e08f07573cfd74_bg.wasm  polka-run-72ff7f055582f40d.js  polka-run-72ff7f055582f40d_bg.wasm  polka-run-73348292fff6b179.js  polka-run-73348292fff6b179_bg.wasm  polka-run-866685a2afd62447.js  polka-run-866685a2afd62447_bg.wasm  polka-run-89057acb516a990c.js  polka-run-89057acb516a990c_bg.wasm  polka-run-97d28de87a0f5986.js  polka-run-97d28de87a0f5986_bg.wasm  polka-run-ad3e9175b8a7108d.js  (+13 more)
.github/workflows/: .gitignore  dependency-update.yaml  deploy.yaml
.github/workflows/scripts/: check_polkavm_version.sh  update_cargo_and_pr.sh
app/: .gitignore  Cargo.toml  index.html  leptosfmt.toml  package-lock.json  package.json
app/src/: app.rs  disassembler.ron  disassembler.rs  file_upload.rs  home.rs  lib.rs  main.rs  navigation.rs
app/src/pages/: disassembler.ron  test.ron
app/style/: output.css
logo/: logo.psd
src/: app.rs  bin.rs  db.rs  disassembler.ron  disassembler.rs  file_upload.rs  home.rs  lib.rs  main.rs  mock.html  navigation.rs
style/: output.css  reset.css
