[package]
name = "polkarun"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = { version = "0.2", features = ["http"] }
leptos = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
polkavm = "0.1.1"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "DataTransfer", "DragEvent", "File", "FileList", "FileReader", "ProgressEvent"] }

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
log = "0.4.17"
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}

[workspace.metadata.leptos]
name = "polkarun"
